# codex-raytracer

./: .gitignore  AGENTS.md  CLONE_GUIDE.md  CMakeLists.txt  CODING_GUIDE.md  PRODUCT_SPEC.md  README.md  STACK_DESIGN.md  VERSIONING.md  verify.sh
.github/workflows/: ci.yml
.notuse/: VERSION_PROMPTS.md
design/protocol/: contract.md
design/renderer/: v0.1.0-overview.md  v0.2.0-sphere-hit.md  v0.3.0-camera-sampling.md  v0.4.0-materials.md  v0.5.0-blur.md  v0.6.0-bvh.md  v0.7.0-textures.md  v0.8.0-cornell.md  v0.9.0-volume.md  v1.0.0-overview.md
include/raytracer/: aabb.hpp  bvh.hpp  camera.hpp  constant_medium.hpp  hittable.hpp  hittable_list.hpp  material.hpp  onb.hpp  pdf.hpp  ppm.hpp  quad.hpp  random.hpp  ray.hpp  sphere.hpp  texture.hpp  transform.hpp  vec3.hpp
src/: bvh.cpp  constant_medium.cpp  main.cpp  ppm.cpp  quad.cpp  sphere.cpp  transform.cpp
tests/integration/: ppm_integration_test.cpp
tests/unit/: bvh_test.cpp  material_scatter_test.cpp  pdf_test.cpp  quad_test.cpp  sphere_test.cpp  texture_test.cpp  vec3_test.cpp
tools/: bvh_benchmark.cpp
